# codility

./: .gitignore  CMakeLists.txt  cppcheck.sh.in  vcl-config.cmake
92-SocksLaundering/: clang-format.sh.in
92-SocksLaundering/benchmarks/: solution_bench.cpp
92-SocksLaundering/src/: main.cpp  solutions.h
92-SocksLaundering/tests/: CMakeLists.txt  solution_test.cpp
99-StrSymmetryPoint/: README.md
99-StrSymmetryPoint/benchmarks/: solution_bench.cpp
99-StrSymmetryPoint/src/: main.cpp  solutions.h
99-StrSymmetryPoint/tests/: solution_test.cpp
BinaryGap/benchmarks/: solution_bench.cpp
BinaryGap/src/: main.cpp  solutions.h
BinaryGap/tests/: CMakeLists.txt  solution_test.cpp  test.cpp
benchmarks/: BinaryGap_bench.cpp  BinarySearch_bench.cpp  CMakeLists.txt  OffsetGenerator.h  RectangleBuilderGreaterArea_bench.cpp  SocksLaundering_bench.cpp  StrSymmetryPoint_bench.cpp  TwoArray_bench.cpp
docs/: README-1-BinaryGap.md  README-91-RectangleBuilderGreaterArea.md  README-92-SocksLaundering.md
etc/: cppcheck-suppressions.txt
src/: BinaryGap.h  BinarySearch.h  CacheArray.h  RectangleBuilderGreaterArea.h  SocksLaundering.h  StrSymmetryPoint.h  TwoArray.h  main.cpp
tests/: BinaryGap_test.cpp  BinarySearch_test.cpp  CMakeLists.txt  CacheArray_test.cpp  RectangleBuilderGreaterArea_test.cpp  SocksLaundering_test.cpp  StrSymmetryPoint_test.cpp  TwoArray_test.cpp  test.cpp
